# libisyntax

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  meson.build  meson_options.txt
src/: isyntax_example.c  isyntax_example2.c  isyntax_to_tiff.c  libisyntax.c  libisyntax.h
src/examples/: isyntax_dirwalk.c  isyntax_example.c  isyntax_to_tiff.c
src/isyntax/: isyntax.c  isyntax.h  isyntax_reader.c  isyntax_reader.h  isyntax_streamer.c  isyntax_streamer.h
src/platform/: common.h  intrinsics.h  platform.c  platform.h  win32_utils.c  win32_utils.h  work_queue.c
src/utils/: benaphore.c  benaphore.h  block_allocator.c  block_allocator.h  libtiff_api.h  mathutils.c  mathutils.h  memrw.c  memrw.h  stringutils.c  stringutils.h  timerutils.c  timerutils.h
test/: compare-fixture.py  fetch.py  match.py  thread_test.c  thread_test.cpp
